路由的设定

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -68,3 +68,9 @@ textarea {resize:none;}
   display: inline-block;
   vertical-align: middle;
 }
+
+input {
+  vertical-align: middle;
+  border: none;
+  outline: none;
+}
