--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -8,6 +8,7 @@
 
 body {
   background-color: #f5f5f5;
+  font-family: 'Helvetica Neue',Tahoma,Arial,PingFangSC-Regular,'Hiragino Sans GB','Microsoft Yahei',sans-serif;
 }
 
 $pxrem: (2 / (3 * 72));
